--- a/.github/actions/load_UWLCM_singularity_image/action.yml
+++ b/.github/actions/load_UWLCM_singularity_image/action.yml
@@ -25,8 +25,8 @@ runs:
     id: cache_singularity
     uses: actions/cache@v2
     with:
-      path: '${{ inputs.path }}/uwlcm_ubuntu_20_04_cuda_11_4.sif'
-      key: 'sng_ubuntu_20_04_cuda_11_4'
+      path: '${{ inputs.path }}/uwlcm_ubuntu_20_04_cuda_11_4_v2.sif'
+      key: 'sng_ubuntu_20_04_cuda_11_4_v2'
       
   - name: Download UWLCM Singularity image
     shell: bash
@@ -35,7 +35,7 @@ runs:
       [ "${{steps.cache_singularity.outputs.cache-hit}}" != "true" ] && \
       {
       mkdir '${{ inputs.path }}';
-      singularity pull --disable-cache --dir '${{ inputs.path }}' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4;
+      singularity pull --disable-cache --dir '${{ inputs.path }}' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4_v2;
       } \
       || \
       true
@@ -44,4 +44,4 @@ runs:
   - name: Set friendly Singularity image name
     uses: allenevans/set-env@v2.0.0
     with:
-      SI: '${{ inputs.path }}/uwlcm_ubuntu_20_04_cuda_11_4.sif'
+      SI: '${{ inputs.path }}/uwlcm_ubuntu_20_04_cuda_11_4_v2.sif'
