--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -262,6 +262,10 @@ jobs:
         repository: igfuw/kid-libcloud
         path: kid-libcloud
 
+
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+
     - name: run KiD LWP test
       working-directory: ${{github.workspace}}/kid-libcloud
       run: PYTHONPATH=${{ github.workspace }}/installed/usr/lib/python3/dist-packages singularity exec -B${{ github.workspace }}/installed  $SI bash ./.travis_scripts/lwp_test.sh
