--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,59 +293,59 @@ endif()
 
 ############################################################################################
 # BOOST ODEINT VERSION TEST
-message(STATUS "Testing if Boost ODEINT version >= 1.58")
-set(pfx "boost odeint check")
-execute_process(COMMAND "mktemp" "-d" "/tmp/tmp.XXX" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
-if (NOT status EQUAL 0) 
-  message(FATAL_ERROR "${pfx}: mkdtemp failed")
-endif()
-file(WRITE "${tmpdir}/test.cpp" "
-  #define THRUST_DEVICE_SYSTEM THRUST_DEVICE_SYSTEM_CPP
-  
-  #include <thrust/system/cpp/vector.h>
-
-  #include <boost/numeric/odeint.hpp>
-  #include <boost/numeric/odeint/external/thrust/thrust.hpp>
-  
-  struct rhs 
-  {
-    void operator()(
-      const thrust::cpp::vector<float> &psi,
-      thrust::cpp::vector<float> &dot_psi,
-      const float /* t */
-    )  
-    {
-      assert(psi.size() == dot_psi.size());
-    }  
-  };
-  
-  int main() 
-  { 
-    boost::numeric::odeint::euler<
-      thrust::cpp::vector<float>, // state_type
-      float,                      // value_type
-      thrust::cpp::vector<float>, // deriv_type
-      float,                      // time_type
-      boost::numeric::odeint::thrust_algebra,
-      boost::numeric::odeint::thrust_operations
-    > chem_stepper;
-  
-    thrust::cpp::vector<float> v(2);
-    chem_stepper.do_step(rhs(), v, 0, 1);
-  }
-")
-execute_process(COMMAND "${CMAKE_CXX_COMPILER}" "-std=c++14" "test.cpp" "-I${Boost_INCLUDE_DIR}" "-I${THRUST_INCLUDE_DIR}" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status ERROR_VARIABLE msg)
-if (NOT status EQUAL 0) 
-  message(FATAL_ERROR "${pfx}: c++ compiler failed\n ${msg}")
-endif()
-execute_process(COMMAND "./a.out" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status OUTPUT_VARIABLE msg)
-if (NOT status EQUAL 0)
-  message(FATAL_ERROR "${pfx}: test program failed, install Boost odeint version >= 1.58")
-endif()
-unset(pfx)
-unset(tmpdir)
-unset(msg)
-unset(status)
+#message(STATUS "Testing if Boost ODEINT version >= 1.58")
+#set(pfx "boost odeint check")
+#execute_process(COMMAND "mktemp" "-d" "/tmp/tmp.XXX" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
+#if (NOT status EQUAL 0) 
+#  message(FATAL_ERROR "${pfx}: mkdtemp failed")
+#endif()
+#file(WRITE "${tmpdir}/test.cpp" "
+#  #define THRUST_DEVICE_SYSTEM THRUST_DEVICE_SYSTEM_CPP
+#  
+#  #include <thrust/system/cpp/vector.h>
+#
+#  #include <boost/numeric/odeint.hpp>
+#  #include <boost/numeric/odeint/external/thrust/thrust.hpp>
+#  
+#  struct rhs 
+#  {
+#    void operator()(
+#      const thrust::cpp::vector<float> &psi,
+#      thrust::cpp::vector<float> &dot_psi,
+#      const float /* t */
+#    )  
+#    {
+#      assert(psi.size() == dot_psi.size());
+#    }  
+#  };
+#  
+#  int main() 
+#  { 
+#    boost::numeric::odeint::euler<
+#      thrust::cpp::vector<float>, // state_type
+#      float,                      // value_type
+#      thrust::cpp::vector<float>, // deriv_type
+#      float,                      // time_type
+#      boost::numeric::odeint::thrust_algebra,
+#      boost::numeric::odeint::thrust_operations
+#    > chem_stepper;
+#  
+#    thrust::cpp::vector<float> v(2);
+#    chem_stepper.do_step(rhs(), v, 0, 1);
+#  }
+#")
+#execute_process(COMMAND "${CMAKE_CXX_COMPILER}" "-std=c++14" "test.cpp" "-I${Boost_INCLUDE_DIR}" "-I${THRUST_INCLUDE_DIR}" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status ERROR_VARIABLE msg)
+#if (NOT status EQUAL 0) 
+#  message(FATAL_ERROR "${pfx}: c++ compiler failed\n ${msg}")
+#endif()
+#execute_process(COMMAND "./a.out" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status OUTPUT_VARIABLE msg)
+#if (NOT status EQUAL 0)
+#  message(FATAL_ERROR "${pfx}: test program failed, install Boost odeint version >= 1.58")
+#endif()
+#unset(pfx)
+#unset(tmpdir)
+#unset(msg)
+#unset(status)
 
 # generate a header file with git revision id
 if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
@@ -357,9 +357,9 @@ endif()
 
 enable_testing()
 
-add_subdirectory(tests)
+#add_subdirectory(tests)
 add_subdirectory(include) 
-add_subdirectory(bindings) 
+#add_subdirectory(bindings) 
 
 ############################################################################################
 # installation
