--- a/.github/actions/libcloudphxx_build/action.yml
+++ b/.github/actions/libcloudphxx_build/action.yml
@@ -20,6 +20,10 @@ inputs:
     description: "CMake install prefix"
     required: true
     default: "/usr/local"
+  tag:
+    description: 'Singularity image tag'
+    required: true
+    default: 'ubuntu_20_04_cuda_11_4_v3'
 
 runs:
   using: "composite"
@@ -34,6 +38,7 @@ runs:
     uses: ./.github/actions/load_UWLCM_singularity_image
     with:
       path: ${{ inputs.path }}/singularity_images
+      tag: ${{ inputs.tag }}
   
 #  - name: Install Singularity
 #    #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
