--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -7,29 +7,29 @@ on:
     branches: [ master ]
 
 jobs:
-#  build_CUDA:
-#    runs-on: ubuntu-20.04
-#    strategy:
-#      matrix:
-#        name: ["CUDA"]
-#        build_type: ["Debug", "RelWithDebInfo"]
-#        include:
-#        - name: "CUDA"
-#          disable_cuda: false
-#          # not enough RAM to compile Debug CUDA on 4 threads
-#          threads: 1
-#
-#    steps:
-#    - uses: actions/checkout@v2
-#
-#    - name: build libcloudph++
-#      #uses: igfuw/libcloudphxx_build@v0.1-beta
-#      uses: ./.github/actions/libcloudphxx_build
-#      with:
-#        disable_cuda: ${{matrix.disable_cuda}}
-#        build_type: ${{matrix.build_type}}
-#        threads: ${{matrix.threads}}
-#        path: ${{ github.workspace }}
+  build_CUDA:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        name: ["CUDA"]
+        build_type: ["Debug", "RelWithDebInfo"]
+        include:
+        - name: "CUDA"
+          disable_cuda: false
+          # not enough RAM to compile Debug CUDA on 4 threads
+          threads: 1
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: build libcloudph++
+      #uses: igfuw/libcloudphxx_build@v0.1-beta
+      uses: ./.github/actions/libcloudphxx_build
+      with:
+        disable_cuda: ${{matrix.disable_cuda}}
+        build_type: ${{matrix.build_type}}
+        threads: ${{matrix.threads}}
+        path: ${{ github.workspace }}
 
   build:
     runs-on: ubuntu-20.04
